--- a/get.html
+++ b/get.html
@@ -1,4 +1,12 @@
-<!DOCTYPE html><head><meta charset="utf-8"/><title>Get | Fluentix</title><link href="https://cdn.prod.website-files.com/674856bff10105193a1e4dd4/css/fluentix.webflow.5265ee0f7.css" rel="stylesheet" type="text/css"/><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script><link href="fluentix-white.png" rel="shortcut icon" type="image/png" /> <link href="./images/fluentix-white.png" rel="apple-touch-icon" /><link href="https://example.com/new-webclip-icon.png" rel="apple-touch-icon"/><!-- code to improve the font quality -->
+<!DOCTYPE html><head><meta charset="utf-8"/>
+ <meta property="og:title" content="Fluentix: Meant to be fluent.">
+<meta property="og:description" content="Fluentix, a programming language that is planned to made the coding proccess fluent for developers. It is right now in WIP but no time it will launch.">
+<meta property="og:type" content="website">
+<meta property="og:image" content="fluentix-white.png">
+
+<meta name="twitter:card" content="fluentix-white.png">
+<meta name="twitter:title" content="Fluentix: Meant to be fluent.">
+<meta name="twitter:description" content="Fluentix, a programming language that is planned to made the coding proccess fluent for developers. It is right now in WIP but no time it will launch."><title>Get | Fluentix</title><link href="https://cdn.prod.website-files.com/674856bff10105193a1e4dd4/css/fluentix.webflow.5265ee0f7.css" rel="stylesheet" type="text/css"/><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script><link href="fluentix-white.png" rel="shortcut icon" type="image/png" /> <link href="./images/fluentix-white.png" rel="apple-touch-icon" /><link href="https://example.com/new-webclip-icon.png" rel="apple-touch-icon"/><!-- code to improve the font quality -->
 <style>
   * {
   -webkit-font-smoothing: antialiased;
